--- a/ServiceLibraries/ServiceLibraries.csproj
+++ b/ServiceLibraries/ServiceLibraries.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.3.110.34" />
+  </ItemGroup>
+
 </Project>
