--- a/ServiceLibraries/ServiceLibraries.csproj
+++ b/ServiceLibraries/ServiceLibraries.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Core" Version="3.3.104.36" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.110.34" />
   </ItemGroup>
 
