--- a/Logging/Logging.csproj
+++ b/Logging/Logging.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.Core" Version="3.3.104.37" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.110.35" />
+  </ItemGroup>
 
 </Project>
